veil-tests/src/compile_tests/fail/redact_union.stderr
error: this trait cannot be derived for unions
 --> src/compile_tests/fail/redact_union.rs:4:1
  |
4 | union Foo {
  | ^^^^^
